--- a/BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html
+++ b/BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html
@@ -70,8 +70,26 @@
             </p>
 
             <p>
-                I've <a href="../CreatingAnRPackage_11-09-18/CreatingAnRPackage_11-09-18.html">written</a> the above code into an R package described <a href="https://github.com/JosephCrispell/addTextLabels">here</a>. An interesting problem, and there is plenty of room for improvement!
+                I've <a href="../CreatingAnRPackage_11-09-18/CreatingAnRPackage_11-09-18.html">written</a> the above code into an R package described <a href="https://github.com/JosephCrispell/addTextLabels">here</a>. An interesting problem, and there is plenty of room for improvement!<br><br>
+
+                An interesting note! If the ranges of the X and Y axes are different, then the label placement will favour the axis with the larger range. I addressed this be rescaling the X axis:
             </p>
+
+            <div id="codeBlock">
+
+              # Get the axis limits<br>
+              axisLimits &lt;- par("usr")<br><br>
+
+              # Calculate the axis ranges<br>
+              xRange &lt;- axisLimits[2] - axisLimits[1]<br>
+              yRange &lt;- axisLimits[4] - axisLimits[3]<br><br>
+
+              # Calculate the xFactor<br>
+              xFactor &lt;- yRange / xRange<br>
+
+              # Scale the X axis to match the scale of Y axis<br>
+              xValuesRescaled &lt;- xValues * xFactor
+            </div>
 
         </div>
 
