--- a/BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html
+++ b/BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html
@@ -85,7 +85,7 @@
               yRange &lt;- axisLimits[4] - axisLimits[3]<br><br>
 
               # Calculate the xFactor<br>
-              xFactor &lt;- yRange / xRange<br>
+              xFactor &lt;- yRange / xRange<br><br>
 
               # Scale the X axis to match the scale of Y axis<br>
               xValuesRescaled &lt;- xValues * xFactor
