--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/DownloadFASTQs_19-10-18/DownloadFASTQs_19-10-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/DownloadFASTQs_19-10-18/DownloadFASTQs_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Downloading raw sequencing data (FASTQ) files (19-10-18)<br><br>
+                            How to download FASTQ files from NCBI using ACCESSION numbers
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/CreatingAnRPackage_11-09-18/CreatingAnRPackage_11-09-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/CreatingAnRPackage_11-09-18/CreatingAnRPackage_Thumbnail.png" class="thumbnail">
