--- a/BlogPosts/MultiThreading_04-05-18/MultiThreading_04-05-18.html
+++ b/BlogPosts/MultiThreading_04-05-18/MultiThreading_04-05-18.html
@@ -142,7 +142,7 @@
                 &emsp;&emsp;}<br><br>
 
                 &emsp;&emsp;// Define a method to wait until threads finished<br>
-                &emsp;&emsp;public static boolean waitUntilAllFinished(MyThread[] threads){<br><br>
+                &emsp;&emsp;public static void waitUntilAllFinished(MyThread[] threads){<br><br>
 
                 &emsp;&emsp;&emsp;&emsp;// Initialise a variable to record whether all threads finished<br>
                 &emsp;&emsp;&emsp;&emsp;boolean allFinished = false;<br><br>
