--- a/Outputs.html
+++ b/Outputs.html
@@ -43,6 +43,8 @@
             <h1>Articles</h1>
 
             <p>
+                2018 - <a href="https://www.frontiersin.org/articles/10.3389/fvets.2018.00272/full">Whole Genome Sequencing for determining the source of Mycobacterium bovis infections in livestock herds and wildlife in New Zealand</a>
+                <br><br>
                 2017 - <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5314462/">Using whole genome sequencing to investigate transmission in a multi-host system: bovine Tuberculosis in New Zealand</a>
                 <br><br>
                 2016 - <a href="http://theses.gla.ac.uk/8254/">My PhD thesis! - available soon...</a>
