--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/Boxplot_27-11-18/Boxplot_27-11-18.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/Boxplot_27-11-18/Boxplot_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            A boxplot in R (03-12-18)<br><br>
+                            Creating and understanding a boxplot in R
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/DownloadFASTQs_19-10-18/DownloadFASTQs_19-10-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/DownloadFASTQs_19-10-18/DownloadFASTQs_Thumbnail.png" class="thumbnail">
