--- a/BlogPosts/Boxplot_27-11-18/Boxplot_27-11-18.html
+++ b/BlogPosts/Boxplot_27-11-18/Boxplot_27-11-18.html
@@ -2,7 +2,7 @@
 <html>
 
     <head>
-        <title>Joseph Crispell | Blog - Multithreading in R</title>
+        <title>Joseph Crispell | Blog - Boxplot</title>
         <link href="../../default.css" rel="stylesheet" type="text/css">
 
         <!-- Global site tag (gtag.js) - Google Analytics -->
