--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/HomoplasyFinder_24-01-19/HomoplasyFinder_24-01-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/HomoplasyFinder_24-01-19/HomoplasyFinder_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            HomoplasyFinder (24-01-18)<br><br>
+                            Why I built this tool and what happened along the way.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/Boxplot_27-11-18/Boxplot_27-11-18.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/Boxplot_27-11-18/Boxplot_Thumbnail.png" class="thumbnail">
