--- a/Blog.html
+++ b/Blog.html
@@ -39,12 +39,24 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/SpreadPoints_07-02-19/SpreadPoints_07-02-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/SpreadPoints_07-02-19/SpreadPoints_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            A quick post about my new R package: spreadPoints() (07-02-19)<br><br>
+                            A new R function to add non-randomly spread points onto boxplot.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/HomoplasyFinder_24-01-19/HomoplasyFinder_24-01-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/HomoplasyFinder_24-01-19/HomoplasyFinder_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            HomoplasyFinder (24-01-18)<br><br>
+                            HomoplasyFinder (24-01-19)<br><br>
                             Why I built this tool and what happened along the way.
                         </div>
                     </div>
