--- a/BlogPosts/SRASubmission_06-04-17/SRASubmission_06-04-17.html
+++ b/BlogPosts/SRASubmission_06-04-17/SRASubmission_06-04-17.html
@@ -69,7 +69,7 @@
                 &emsp;&emsp; - Wait for the submission to be accepted<br>
                 &emsp;&emsp; - Click on Download a list of objects to get the assigned accession numbers<br><br>
                 
-                4) Prepare metedata file for Sequence Read Archive submission<br>
+                4) Prepare metadata file for Sequence Read Archive submission<br>
                 &emsp;&emsp; - Download a SRA_metadata_acc.xlsx file (I had to begin a
                 <a href="https://submit.ncbi.nlm.nih.gov/subs/sra/">SRA submission</a>). I keep a copy
                 <a href="https://github.com/JosephCrispell/GeneralTools/NewZealand/sra_subtemplate_v2-7.xlsx">here</a><br>
