--- a/BlogPosts/SRASubmission_06-04-17/SRASubmission_06-04-17.html
+++ b/BlogPosts/SRASubmission_06-04-17/SRASubmission_06-04-17.html
@@ -82,7 +82,7 @@
             </div>
             
             <p>
-                &emsp;&emsp; - Create a Sequence Read Archive, if you haven't already, and fill in the required fields<br>
+                &emsp;&emsp; - Create a Sequence Read Archive submission, if you haven't already, and fill in the required fields<br>
                 &emsp;&emsp; - At this point you can upload the metadata file you created in step 4<br>
                 <br><br>
                 5) Upload the FASTQ files<br>
@@ -129,6 +129,11 @@
                 &emsp;&emsp; - Click on the navigate to folder icon and paste in full folder path<br>
                 &emsp;&emsp; - Create a new folder<br>
                 &emsp;&emsp; - Drag the FASTQ files into the new folder<br>
+
+                7) Completing the Sequence Read Archive submission<br>
+                &emsp;&emsp; - Go back to the Sequence Read Archive submission page
+                &emsp;&emsp; - On the data uploading tab the folder you created to upload your FASTQ files into should exist. Select this folder and click continue.
+                &emsp;&emsp; - If no errors appear, it means all the FASTQ files were successfully linked to the metadata you provided and you can submit!
             </p>
             
             <hr>
