--- a/Outputs.html
+++ b/Outputs.html
@@ -45,6 +45,8 @@
             <p>
                 2019 - <a href="https://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000245?originator=authorOffprint&identity=171279&timestamp=20200121152805&signature=4d39664c2c9b68870a99f0ed34f58489">HomoplasyFinder: a simple tool to identify homoplasies on a phylogeny</a>
                 <br><br>
+                2019 - <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.15061#.XHe9ERs9Q1Q.twitter">Disease management at the wildlife‐livestock interface: using whole‐genome sequencing to study the role of elk in Mycobacterium bovis transmission in Michigan, USA</a>
+                <br><br>
                 2018 - <a href="https://www.frontiersin.org/articles/10.3389/fvets.2018.00272/full">Whole Genome Sequencing for determining the source of Mycobacterium bovis infections in livestock herds and wildlife in New Zealand</a>
                 <br><br>
                 2017 - <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5314462/">Using whole genome sequencing to investigate transmission in a multi-host system: bovine Tuberculosis in New Zealand</a>
