--- a/BlogPosts/SpreadPoints_07-02-19/SpreadPoints_07-02-19.html
+++ b/BlogPosts/SpreadPoints_07-02-19/SpreadPoints_07-02-19.html
@@ -37,10 +37,10 @@
 
             <br><br><br>
 
-            <h1>A quick post about my new R package: spreadPoints()&emsp;07-02-19</h1>
+            <h1>A quick post about my new R function: spreadPoints()&emsp;07-02-19</h1>
 
             <p>
-                I've created a new <a href="https://www.r-project.org/">R</a> package called <c>spreadPoints</c>. I built this package to house my <c>spreadPoints()</c> function.<br><br>
+                I've created a new <a href="https://www.r-project.org/">R</a> function called <c>spreadPoints</c>, in my <c>plotteR</c> package.<br><br>
 
                 The <c>spreadPoints()</c> function is designed to add points onto an existing boxplot. The points are spread out to avoid overlap. Here it is at work in R:
             </p>
@@ -49,11 +49,10 @@
 
                 # Install and load the devtools package<br>
                 install.packages("devtools")<br>
-                library("devtools")<br><br>
 
-                # Install and load the spreadPoints package<br>
-                install_github("JosephCrispell/spreadPoints")<br>
-                library(spreadPoints)<br><br>
+                # Install and load the plotteR package<br>
+                devtools::install_github("JosephCrispell/plotteR")<br>
+                library(plotteR)<br><br>
 
                 # Generate some example points - drawn from exponential distribution<br>
                 values &lt;- rnorm(n=50)<br><br>
@@ -124,7 +123,7 @@
             <img src="SpreadPoints_Thumbnail.png" width="75%" hspace="0.5%" vspace="1%">
 
             <p>
-                A pretty handy function for me at least, if you're interested in the code behind <c>spreadPoints()</c>, take a look in its <a href="https://github.com/JosephCrispell/spreadPoints">repository</a> on github.
+                A pretty handy function for me at least, if you're interested in the code behind <c>spreadPoints()</c>, take a look in its <a href="https://github.com/JosephCrispell/plotteR/blob/master/R/spreadPoints.R">repository</a> on github.
             </p>
 
         </div>
