--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/MultipleHistograms_23-04-19/MultipleHistograms_23-04-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/MultipleHistograms_23-04-19/MultipleHistograms_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            An R function to plot multiple histograms in the same plot (23-04-19)<br><br>
+                            A brief post about a new R function I have added to my plotteR package.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/RATT_17-03-19/RATT_17-03-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/RATT_17-03-19/RATT_Thumbnail.png" class="thumbnail">
