--- a/Outputs.html
+++ b/Outputs.html
@@ -79,7 +79,7 @@
                 <ul>
                   <li>Bioinformatics pipeline for processing Whole Genome Sequenced <i>Mycobacterium</i> species. All scripts are available <a href="https://github.com/JosephCrispell/GeneralTools/tree/master/ProcessingPipeline">here</a>.</li>
                   <li><a href="https://github.com/JosephCrispell/homoplasyFinder">HomoplasyFinder</a>: A simple tool to identify homoplasies on a phylogeny.</li>
-                  <li><a href="https://github.com/JosephCrispell/addTextLabels">addTextLabels</a>: An R function (in its own package) for add non-overlapping labels to an existing plot.</li>
+                  <li><a href="https://github.com/JosephCrispell/plotteR">plotteR</a>: A collection of tools to help with base R plotting.</li>
                 </ul>
             </p>
 
