--- a/Outputs.html
+++ b/Outputs.html
@@ -43,6 +43,9 @@
             <h1>Articles</h1>
 
             <p>
+                2019 - <a href="https://royalsocietypublishing.org/doi/10.1098/rstb.2018.0264">Analysing livestock network data for infectious disease control: an argument for routine data collection in emerging economies</a>
+                <br><br>
+
                 2019 - <a href="https://mgen.microbiologyresearch.org/content/journal/mgen/10.1099/mgen.0.000245?originator=authorOffprint&identity=171279&timestamp=20200121152805&signature=4d39664c2c9b68870a99f0ed34f58489">HomoplasyFinder: a simple tool to identify homoplasies on a phylogeny</a>
                 <br><br>
                 2019 - <a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/mec.15061#.XHe9ERs9Q1Q.twitter">Disease management at the wildlife‐livestock interface: using whole‐genome sequencing to study the role of elk in Mycobacterium bovis transmission in Michigan, USA</a>
