--- a/BlogPosts/MultipleHistograms_23-04-19/MultipleHistograms_23-04-19.html
+++ b/BlogPosts/MultipleHistograms_23-04-19/MultipleHistograms_23-04-19.html
@@ -40,7 +40,7 @@
             <h1>A quick post about my new R function: plotMultipleHistograms()&emsp;07-02-19</h1>
 
             <p>
-                Today I lost myself in creating a new <a href="https://www.r-project.org/">R</a> function called <c>plotMultipleHistograms()</c>, in my <c>plotteR</c> package. This function plots multiple histograms on the same plot.<br><br>
+                Today I lost myself in creating a new <a href="https://www.r-project.org/">R</a> function called <c>plotMultipleHistograms()</c>, in my <c>basicPlotteR</c> package. This function plots multiple histograms on the same plot.<br><br>
 
                 Histograms are a type of plot I use a lot, they summarise the shape of a distribution. Each bar tells me how many values fell within that particular bin.<br><br>
 
@@ -52,9 +52,9 @@
                 # Install and load the devtools package<br>
                 install.packages("devtools")<br><br>
 
-                # Install and load the plotteR package<br>
-                devtools::install_github("JosephCrispell/plotteR")<br>
-                library(plotteR)<br><br>
+                # Install and load the basicPlotteR package<br>
+                devtools::install_github("JosephCrispell/basicPlotteR")<br>
+                library(basicPlotteR)<br><br>
 
                 # Set the seed<br>
                 set.seed(254534)<br><br>
@@ -86,7 +86,7 @@
             </p>
 
             <p>
-                You'll find the code behind the <c>plotMultipleHistograms()</c> function <a href="https://github.com/JosephCrispell/plotteR/blob/master/R/plotMultipleHistograms.R">here</a> on github. Let me know how you get on with it.
+                You'll find the code behind the <c>plotMultipleHistograms()</c> function <a href="https://github.com/JosephCrispell/basicPlotteR/blob/master/R/plotMultipleHistograms.R">here</a> on github. Let me know how you get on with it.
             </p>  
 
         </div>
