--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/ProgressBar_04-06-19/ProgressBar_04-06-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/ProgressBar_04-06-19/ProgressBar_Thumbnail.gif" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            My new progress bar function in R (04-06-19)<br><br>
+                            A brief post about a new function I wrote, and more generally about monitoring progress in your code.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/MultipleHistograms_23-04-19/MultipleHistograms_23-04-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/MultipleHistograms_23-04-19/MultipleHistograms_Thumbnail.png" class="thumbnail">
