--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/OpenStreetMaps_20-07-19/OpenStreetMaps_20-07-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/OpenStreetMaps_20-07-19/OpenStreetMaps_Thumbnail.gif" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Plotting maps in R (20-07-19)<br><br>
+                            A quick post about using OpenStreetMaps to plot maps in R.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/ProgressBar_04-06-19/ProgressBar_04-06-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/ProgressBar_04-06-19/ProgressBar_Thumbnail.gif" class="thumbnail">
