--- a/Blog.html
+++ b/Blog.html
@@ -41,7 +41,7 @@
 
             <a href="BlogPosts/OpenStreetMaps_20-07-19/OpenStreetMaps_20-07-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
-                    <img src="BlogPosts/OpenStreetMaps_20-07-19/OpenStreetMaps_Thumbnail.gif" class="thumbnail">
+                    <img src="BlogPosts/OpenStreetMaps_20-07-19/OpenStreetMaps_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
                             Plotting maps in R (20-07-19)<br><br>
