--- a/Blog.html
+++ b/Blog.html
@@ -39,6 +39,18 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/Watermark_17-09-19/Watermark_17-09-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/Watermark_17-09-19/Watermark_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            My new watermark function (17-09-19)<br><br>
+                            A quick post about my new watermark() function in my basicPlotteR package.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/OpenStreetMaps_20-07-19/OpenStreetMaps_20-07-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/OpenStreetMaps_20-07-19/OpenStreetMaps_Thumbnail.png" class="thumbnail">
