plotFASTA and addPoints

--- a/Blog.html
+++ b/Blog.html
@@ -39,12 +39,36 @@
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
             <br><br>
 
+            <a href="BlogPosts/addPoints_27-10-19/addPoints_27-10-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/addPoints_27-10-19/addPoints_Thumbnail.gif" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            My new addPoints() function (27-10-19)<br><br>
+                            A post about a new function I developed to avoid overlapping points.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
+            <a href="BlogPosts/plotFASTA_27-10-19/plotFASTA_27-10-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/plotFASTA_27-10-19/plotFASTA_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            My new plotFASTA() function (27-10-19)<br><br>
+                            A short advert for my newest addition to my basicPlotteR package.
+                        </div>
+                    </div>
+                </div>
+            </a>
+
             <a href="BlogPosts/Watermark_17-09-19/Watermark_17-09-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
                     <img src="BlogPosts/Watermark_17-09-19/Watermark_Thumbnail.png" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            My new watermark function (17-09-19)<br><br>
+                            My new watermark() function (17-09-19)<br><br>
                             A quick post about my new watermark() function in my basicPlotteR package.
                         </div>
                     </div>
@@ -68,7 +92,7 @@
                     <img src="BlogPosts/ProgressBar_04-06-19/ProgressBar_Thumbnail.gif" class="thumbnail">
                     <div class="overlay">
                         <div class="text">
-                            My new progress bar function in R (04-06-19)<br><br>
+                            My new progressBar() function in R (04-06-19)<br><br>
                             A brief post about a new function I wrote, and more generally about monitoring progress in your code.
                         </div>
                     </div>
