--- a/Blog.html
+++ b/Blog.html
@@ -37,7 +37,19 @@
 
             <br><br><br>
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
-            <br><br>
+            <br><br> 
+
+            <a href="BlogPosts/ShapeFile_27-10-19/ShapeFile_27-10-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/ShapeFile_27-10-19/ShapeFile_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Reading and plotting Shape files in R (27-10-19)<br><br>
+                            My second try at this, two years on I write hopefully a slightly better post aabout reading in and plotting shape files.
+                        </div>
+                    </div>
+                </div>
+            </a>
 
             <a href="BlogPosts/addPoints_27-10-19/addPoints_27-10-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
@@ -93,7 +105,7 @@
                     <div class="overlay">
                         <div class="text">
                             My new progressBar() function in R (04-06-19)<br><br>
-                            A brief post about a new function I wrote, and more generally about monitoring progress in your code.
+                            Monitoring progress in your code.
                         </div>
                     </div>
                 </div>
