--- a/BlogPosts/addPoints_27-10-19/addPoints_27-10-19.html
+++ b/BlogPosts/addPoints_27-10-19/addPoints_27-10-19.html
@@ -97,7 +97,7 @@
             <img src="comparison.png" width="95%" hspace="0.5%" vspace="1%">
 
             <p>
-                It is a lot of effort for a subtle change!:-) I created the <c>addPoints()</c> function for a plot where I had a lot of overlapping points so it was pretty helpful.<br><br>
+                It is a lot of effort for a subtle change! I created the <c>addPoints()</c> function for a plot where I had a lot of overlapping points so it was pretty helpful.<br><br>
 
                 Take a look at the <c>addPoints()</c> function <a href="https://github.com/JosephCrispell/basicPlotteR/blob/master/R/addNonOverlappingTestLabelsOrPoints.R">here</a>. Let me know if it works for you!<br>
             </p>  
