--- a/BlogPosts/Boxplot_27-11-18/Boxplot_27-11-18.html
+++ b/BlogPosts/Boxplot_27-11-18/Boxplot_27-11-18.html
@@ -75,7 +75,7 @@
 
               The value of 1.5 is the default value and can be changed using the <c>range</c> parameter of the <c>boxplot()</c> function.<br><br>
 
-              So that's the boxplot - a useful way to summarise your data. Just a note, I often like to overlay my boxplots with the original datapoints using the <c>stripchart()</c> function.
+              So that's the boxplot - a useful way to summarise your data. Just a note, I often like to overlay my boxplots with the original datapoints using the <c>stripchart()</c> function. Or, even better you could try out my <c>spreadPoints()</c> in my <c>basicPlotteR</c> package! Go take a look at the package <a href="https://josephcrispell.github.io/BlogPosts/OverlayText_03-04-18/OverlayText_03-04-18.html">here</a>.
 
             </p>
 
