--- a/Blog.html
+++ b/Blog.html
@@ -45,7 +45,7 @@
                     <div class="overlay">
                         <div class="text">
                             Reading and plotting Shape files in R (27-10-19)<br><br>
-                            My second try at this, two years on I write hopefully a slightly better post aabout reading in and plotting shape files.
+                            My second try at this, two years on I write hopefully a slightly better post about reading in and plotting shape files.
                         </div>
                     </div>
                 </div>
