New post about tanglePlot()

--- a/Blog.html
+++ b/Blog.html
@@ -37,7 +37,19 @@
 
             <br><br><br>
             <p style="text-align: center;">A series of notes to make my life a little easier in the future.</p>
-            <br><br> 
+            <br><br>
+
+            <a href="BlogPosts/tanglePlot_08-12-19/tanglePlot_08-12-19.html" style="text-decoration:none">
+                <div class="thumbnailContainer">
+                    <img src="BlogPosts/tanglePlot_08-12-19/tanglePlot_Thumbnail.png" class="thumbnail">
+                    <div class="overlay">
+                        <div class="text">
+                            Comparing phylogenies with tanglePlot() (09-12-19)<br><br>
+                            A post about a new function I've written to show differences in structure between two phylogenies.
+                        </div>
+                    </div>
+                </div>
+            </a>
 
             <a href="BlogPosts/ShapeFile_27-10-19/ShapeFile_27-10-19.html" style="text-decoration:none">
                 <div class="thumbnailContainer">
